<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.expoagro.expoagrobrasil.controller.CadastroUsuarioActivity">

    <ImageView
        android:id="@+id/viewProduto"
        android:layout_width="121dp"
        android:layout_height="126dp"
        app:srcCompat="@drawable/eab_logosnome"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        tools:layout_editor_absoluteY="-76dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="CADASTRO DE USUÁRIO"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/viewProduto" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputNome"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <AutoCompleteTextView
            android:id="@+id/campoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_nome" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputNome"
        app:layout_constraintLeft_toLeftOf="@+id/textInputNome"
        app:layout_constraintRight_toRightOf="@+id/textInputNome"
        app:layout_constraintTop_toBottomOf="@+id/textInputNome">

        <AutoCompleteTextView
            android:id="@+id/campoEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="58dp"
            android:hint="@string/campo_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputTelefone"
        android:layout_width="303dp"
        android:layout_height="50dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textInputNome"
        app:layout_constraintRight_toRightOf="@+id/textInputNome"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail">

        <com.expoagro.expoagrobrasil.util.PhoneEditText
            android:id="@+id/campoTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_telefone" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="303dp"
        android:layout_height="40dp"
        android:layout_marginTop="7dp"
        android:spinnerMode="dialog"
        android:hint="@string/campo_cidade"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textInputTelefone"
        app:layout_constraintRight_toRightOf="@+id/textInputTelefone"
        app:layout_constraintTop_toBottomOf="@+id/textInputTelefone" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputSenha"
        android:layout_width="303dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="@+id/spinner"
        app:layout_constraintRight_toRightOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <EditText
            android:id="@+id/campoSenha"
            android:layout_width="303dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:hint="@string/campo_senha"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:password="true"
            app:layout_constraintLeft_toLeftOf="@+id/spinner"
            app:layout_constraintRight_toRightOf="@+id/spinner"
            tools:layout_editor_absoluteY="367dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputRepetir"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textInputSenha"
        app:layout_constraintRight_toRightOf="@+id/textInputSenha"
        app:layout_constraintTop_toBottomOf="@+id/textInputSenha">

        <EditText
            android:id="@+id/campoRepetir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_repetirSenha"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/acao_cadastrar"
        app:layout_constraintRight_toRightOf="@+id/textInputRepetir"
        app:layout_constraintTop_toBottomOf="@+id/textInputRepetir" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/acao_cancelar"
        app:layout_constraintLeft_toLeftOf="@+id/textInputRepetir"
        app:layout_constraintTop_toBottomOf="@+id/textInputRepetir" />


</android.support.constraint.ConstraintLayout>