...
    <string name="campo_frequencia">Frequência</string>
    <string name="campo_valor">Valor</string>
    <string name="campo_descricao">Descrição</string>
    <string name="campo_observacao">Observação</string>
    <string name="campo_comentario">Seu comentário</string>

    <string name="acao_login">Entrar</string>
    <string name="acao_voltar">Voltar</string>
    <string name="acao_login_curta">Entrar</string>
    <string name="acao_cadastrar">Cadastrar</string>
    <string name="acao_cancelar">Cancelar</string>
    <string name="acao_alterar_senha">Alterar Senha</string>
    <string name="acao_editar">Editar Conta</string>
    <string name="acao_excluir">Excluir Conta</string>
    <string name="acao_salvar">Salvar</string>
    <string name="acao_comentar">Adicionar Comentário</string>
...
