...
    
    Free for use, no attribution required
-->
<resources>
    <string-array name="cidades_PE">
        <item>Cidades de PERNAMBUCO</item>
        <item>Abreu e Lima</item>
        <item>Afogados da Ingazeira</item>
        <item>Afrânio</item>
        <item>Agrestina</item>
        <item>Água Preta</item>
        <item>Águas Belas</item>
        <item>Alagoinha</item>
...
